--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <input type="text" placeholder="Search..">
 
 
+          <a href="https://github.com/kidGodzilla/minimalist-css-framework" target="_blank" class="right">GitHub</a>
           <!--       <a href="#" class="right">GitHub</a>
           <a href="#" class="right">Components</a> -->
           <a href="#grids" class="right">Grids</a>
